--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     alt="Leo Dandora" class="img-cover">
                 </figure>
 
-                <a href="#" class="card-content">
+                <a href="#portfolio" class="card-content">
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
 
