--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
           <div class="hero-content">
 
-            <h1 class="section-subtitle">Aspiring <span id="auto-typed" class="auto-type"></span></h1>
+            <h1 class="section-subtitle">Aspiring Associate <span id="auto-typed" class="auto-type"></span></h1>
             
             <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
             <script>
