--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </li>
 
               <!-- Download CV Button -->
-              <a href="./assets/files/CALAUSTRO, Kryz-Ian L.-CV.pdf" target="_blank" class="btn download-cv"
+              <a href="./assets/files/CALAUSTRO, Kryz-Ian L.-CV.pdf" target="_blank" class="btn view-cv"
                 download>Download CV</a>
 
             </ul>
