--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
               <!-- Download CV Button -->
               <a href="./assets/files/CALAUSTRO, Kryz-Ian L.-CV.pdf" target="_blank" class="btn download-cv"
-                download>Download CV</a>
+              >Download CV</a>
 
             </ul>
 
